# iot_code

./: README.md
Scenario_1_Solution/Iot_code/: README.md  coap_client.py  coap_server.py  google_iot_client.py  publish_weather.py  publish_weather_to_google.py
Scenario_1_Solution/iot_container/: Dockerfile.coap-client  Dockerfile.coap-server  Dockerfile.publish  README.md  coap_server.py  docker-compose.yml  publish_weather.py
Scenario_1_Solution/smart_contract/: README.md  my-wallet.json
Scenario_1_Solution/smart_contract/solana_smart_contract/: Cargo.toml  payer-keypair.json
Scenario_1_Solution/smart_contract/solana_smart_contract/src/: fetch_data_from_smart_contract.rs  lib.rs  main.rs
Scenario_2_Solution/data_science/: Dockerfile.flaskapp  README.md  flask-app-deployment.yml  flask_app.py  test_model_client.py  weather_data.csv  weather_prediction.py  weather_prediction_model.pkl
Scenario_2_Solution/kubernetes_app/: Dockerfile.coap-client  Dockerfile.coap-server  Dockerfile.mosquitto  Dockerfile.publish  README.md  coap-client-deployment.yml  coap-server-deployment.yml  coap-server-hpa.yml  coap-server-service.yml  coap_client.py  coap_server.py  mosquitto-config.yml  mosquitto.conf  mqtt-broker-deployment.yml  mqtt-broker-hpa.yml  publisher-deployment.yml  test_coap_client.py
Scenario_2_Solution/kubernetes_app/PrometheusConfig_Deployment/: prometheus-clusterrole.yml  prometheus-clusterrolebinding.yml  prometheus-config.yml  prometheus-deployment.yml  prometheus-role.yml  prometheus-rolebinding.yml  prometheus-serviceaccount.yml
