[package]
name = "solana_smart_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "1.10.32"
solana-client = "1.10.32"
solana-sdk = "1.10.32"
bincode = "1.3.3"

[[bin]]
name = "solana_smart_contract"
path = "src/main.rs"

[[bin]]
name = "fetch_data"
path = "src/fetch_data_from_smart_contract.rs"